--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
+    "react-icons": "^4.3.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^4.0.3",
+    "react-sidebar-ui": "^1.2.1",
     "react-spinners": "^0.8.1",
     "redux": "^4.0.5",
     "request": "^2.88.2",
