--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@mui/material": "^5.0.4",
     "axios": "^0.22.0",
     "bootstrap": "^4.4.1",
     "js-cookie": "^2.2.1",
@@ -40,5 +42,7 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "webpack-dev-server": "3.11.1"
+  }
 }
